# lightassay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapter_pack_spec.md  analysis_artifact_spec.md  code_architecture.md  compare_artifact_spec.md  flow_v1.md  glossary.md  preparation_protocol.md  product_frame.md  quickstart.md  roles_and_formats.md  semantic_adapter_spec.md  subprocess_protocol.md  workbook_grammar.md  workbook_spec.md  workflow_config_spec.md
examples/quickstart/: README.md  preparation.json  semantic.json  stub_preparation_adapter.py  stub_semantic_adapter.py  stub_workflow.py  workflow.json
src/lightassay/: __init__.py  _subprocess_capture.py  analyzer.py  backends.py  bootstrap.py  cli.py  comparer.py  diagnostics.py  errors.py  expert.py  orchestrator.py  preparation_config.py  preparer.py  run_artifact_io.py  run_models.py  runner.py  runtime_state.py  semantic_config.py  surface.py  types.py  workbook_models.py  workbook_parser.py  workbook_renderer.py  workflow_config.py  workflow_config_builder.py
tests/: test_adapter_pack.py  test_analyze.py  test_cli_library_parity.py  test_compare.py  test_diagnostics.py  test_expert.py  test_preparation.py  test_quickstart_continue.py  test_run.py  test_smoke.py  test_surface.py  test_workbook.py
tests/fixtures/: adapter_bad_json.py  adapter_echo.py  adapter_echo_config.py  adapter_fail.py  adapter_fail_with_output.py  adapter_missing_field.py  adapter_negative_tokens.py  agent_cli_stub.py  callable_echo.py  compare_adapter_empty_markdown.py  compare_adapter_missing_field.py  not_ready.workbook.md  preparation_adapter_bad_json.py  preparation_adapter_bootstrap.py  preparation_adapter_echo.py  preparation_adapter_empty_directions.py  preparation_adapter_empty_optionals.py  preparation_adapter_fail.py  preparation_adapter_missing_field.py  (+19 more)
(+9 files in other folders)
